# dynamic_object.h

./: CMakeLists.txt  Doxyfile  LICENSE-MIT  README.md  design.md  dynamic_object.h  tests.c
